# cpp-network-programming-cli-chat-app-server-side

./: CMakeLists.txt  README.md  main.cpp
Models/: CMakeCache.txt  Makefile  cmake_install.cmake
Models/request_data/: request_data.cpp  request_data.h
Models/request_type_enum/: request_type_enum.cpp  request_type_enum.h
Models/room/: room.cpp  room.h
Models/room_manager/: room_manager.cpp  room_manager.h
Models/room_member/: room_member.cpp  room_member.h
include/: global_variables.h
src/get_ip_adress/: get_ip_adress.cpp  get_ip_adress.h
src/get_rooms/: get_rooms.cpp  get_rooms.h
src/handle_client/: handle_client.cpp  handle_client.h
src/join_room/: join_room.cpp  join_room.h
src/leave_room/: leave_room.cpp  leave_room.h
src/parse_request/: parse_request.cpp  parse_request.h
src/process_request/: process_request.cpp  process_request.h
src/scokets_helper/: sockets_helper.cpp  sockets_helper.h
src/send_to_ip/: send_to_ip.cpp  send_to_ip.h
src/update_ip/: update_ip.cpp  update_ip.h
